--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.0"
 numpy = "^1.26.2"
 scikit-learn = "^1.3.2"
 matplotlib = "^3.8.2"
+control = "^0.9.4"
+scikit-fuzzy = "^0.4.2"
 
 
 [build-system]
