--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ scikit-learn = "^1.3.2"
 matplotlib = "^3.8.2"
 control = "^0.9.4"
 scikit-fuzzy = "^0.4.2"
+plotly = "^5.18.0"
 
 
 [build-system]
